codepkg/objects/Agency_Admin_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Administrative_Rates__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Administrative Rates</label>
        <referenceTo>Agency_Admin_Rates__c</referenceTo>
        <relationshipLabel>Agency Admin Line Items</relationshipLabel>
        <relationshipName>Agency_Admin_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <label>Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <label>Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Agency Admin Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Admin Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>